--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.tags.CustomProfileActivity" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".ui.tags.TagDetails"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.tags.CustomProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
