make NfcTag Parcelable to improve performance

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.tags.TagDetails"
+            android:name=".ui.tags.TagDetailsActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.tags.CustomProfileActivity"
