--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.tags.custom.DataTypeActivity"></activity>
         <activity
             android:name=".ui.tags.TagDetailsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.tags.CustomProfileActivity"
+            android:name=".ui.tags.custom.CustomProfileActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
