--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="net.htlgrieskirchen.at.jeschl17.nfcdroid">
 
     <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,10 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.tags.custom.WiFiNetworkActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true" >
+        <activity android:name=".ui.tags.custom.AddressActivity"></activity>
         <activity android:name=".ui.tags.custom.LocationActivity" />
-        <activity android:name=".ui.tags.custom.ContactActivity" />
         <activity android:name=".ui.tags.custom.AndroidAppActivity" />
         <activity android:name=".ui.tags.custom.WebsiteLinkActivity" />
         <activity android:name=".ui.tags.custom.TextActivity" />
